fixed the issue of main containt is not properly align with left side

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -107,9 +107,12 @@
 
 /* ======== Responsive Design ======== */
 @media (max-width: 768px) {
+    .to-adjust-toggle{
+        position: absolute;
+    }
+
     .to-adjust-toggle.closed{
         width: 100%;
-        position: absolute;
         z-index: 10;
     }
 
